Harmony - Draw bubble/dialog borders just outside the content area instead of just inside of it.

As noted in code comments, this creates minor graphical bugs at scale
factors greater than 1, but I don't think they can be addressed at the
moment.

BUG=655589,656662

Review-Url: https://chromiumcodereview.appspot.com/2439793002
Cr-Commit-Position: refs/heads/master@{#426570}

Former-commit-id: b1448a03ddd9c30a6711cb485ba0614a5e41579e